--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
         <header>
             <div class="fascia-violetta">
                 <img class="logo" src="img/logo.png" alt="logo">
+              <nav>
+                  <ul>
+                        <li>
+                          <a href="">FEATURES</a>
+                        </li>
+                        <li>
+                          <a href="">EDITORIALS</a>
+                        </li>
+                        <li>
+                          <a href="">ENVIORMENT</a>
+                        </li>
+                        <li>
+                          <a href="">BLOG</a>
+                        </li>
+                        <li>
+                          <a href="">SHOP</a>
+                        </li>
+                        <li>
+                          <a href="">CONTACT</a>
+                        </li>
+                  </ul>
+              </nav>
             </div>
         </header>
         <main class= "clearfix">
