--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <div class="fascia-violetta">
                 <img class="logo" src="img/logo.png" alt="logo">
-              <nav>
+              <nav class="link">
                   <ul>
                         <li>
                           <a href="">FEATURES</a>
