--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <main class= "clearfix">
             <!-- FASCIA GIALLA -->
             <section>
-                <div class="fascia-gialla"></div>
+                <div class="fascia-gialla">
+                    
+                </div>
             </section>
             <!-- COLONNE CELESTI -->
             <section >
