aggiustamenti testo immagine yoga

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
         <main class= "clearfix">
             <!-- FASCIA GIALLA -->
             <section>
-                <div class="fascia-gialla">
-                    
+                <div class="tipa-yoga">
+                    <div class="testo-yoga">
+                        <h1>Pretium</h1>
+                        <p>rueihgvrue9pifghrewu9gheroiugeh</p>
+                    </div>
                 </div>
             </section>
             <!-- COLONNE CELESTI -->
