--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Struttura</title>
 </head>
@@ -45,24 +45,38 @@
             <section>
                 <div class="tipa-yoga">
                     <div class="testo-yoga">
-                        <h1>Pretium</h1>
-                        <p>rueihgvrue9pifghrewu9gheroiugeh</p>
+                        <p class="scritta-grande-yoga">E' scientificamente provato che lo stare in questa posizione fara' credere agli altri che voi stiate meditando</p>
+                        <p class="scritta-piccola-yoga">E' un ottimo modo per non essere disturbati in varie occasioni di socialita'. Col piccolo inconveniente di attirare a voi buddisti, vegani, fruttariani e tante altre categorie minori.</p> 
                     </div>
                 </div>
             </section>
             <!-- COLONNE CELESTI -->
             <section >
                 <div class="sfondo-blu">  
-                    <div class="fascia-alta-celeste"></div>
-                    <div class="colonna-sinistra"></div>
-                    <div class="colonna-centrale"></div>
-                    <div class="colonna-destra"></div>
+                    <div class="leadership">
+                        <h1><strong>Notizie dal mondo</strong></h1>
+                        <p>Cosi' da avere argomenti di conversazione al bar</p>
+                    </div>
+                    <div class="colonna-sinistra">
+                        <img class="immagine-sinistra" src="img/img-1.jpg" alt="donna-pianta">
+                        <h4>La pianta dei dindi</h4>
+                        <p>Ricreata in laboratorio dalla genetica del famoso "Albero Azzurro" questa pianta e' in grado di garantirti una rendita mensile cospicua.</p>
+                    </div>
+                    <div class="colonna-centrale"><img class="immagine-centro" src="img/banner-2.jpg" alt="">
+                        <h4>Caffe' allucinogeno ai dipendenti</h4>
+                        <p>Una ricerca ha dimostrato come l'utilizzo di agenti psicotropi nel caffe' dei dipendenti, permetta di risparmiare sull'elettricita' dei loro dispositivi. Allucinazioni controllate infatti, consentirebbero di poter visionare comunque un monitor mentale garantendo le stesse prestazioni.</p></div>
+                    <div class="colonna-destra">
+                        <img class="immagine-destra" src="img/img-3.jpg" alt="uomini-lampadina">
+                        <h4>Lampadine giganti</h4>
+                        <p>In Belgio il governo ha stanziato fondi stellari per posizionare lampadine giganti in ogni angolo delle citta'. Queste lampadine oltre a garantire illuminazione consentono ai cittadini di riscaldare le parti basse.</p></div>
                 </div>
             </section>
         </main>
         <!-- FASCIA VIOLA SCURA -->
         <footer>
-            <div class="fascia-viola"></div>
+            <div class="frase-finale">
+               <p>Designed whit &#9918;</p>
+            </div>
         </footer>
     </div>
 </body>
