fix colori testo

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
     <div class="contenitore">
         <!-- BANNER VIOLETTO -->
         <header>
-            <div class="fascia-violetta">
+            <div class="fascia-alta">
                 <img class="logo" src="img/logo.png" alt="logo">
               <nav class="link">
                   <ul>
                         <li>
-                          <a href="">FEATURES</a>
+                          <a href="https://thecatsite.com/">FEATURES</a>
                         </li>
                         <li>
-                          <a href="">EDITORIALS</a>
+                          <a href="https://thecatsite.com/">EDITORIALS</a>
                         </li>
                         <li>
-                          <a href="">ENVIORMENT</a>
+                          <a href="https://thecatsite.com/">ENVIORMENT</a>
                         </li>
                         <li>
-                          <a href="">BLOG</a>
+                          <a href="https://thecatsite.com/">BLOG</a>
                         </li>
                         <li>
-                          <a href="">SHOP</a>
+                          <a href="https://thecatsite.com/">SHOP</a>
                         </li>
                         <li>
-                          <a href="">CONTACT</a>
+                          <a href="https://thecatsite.com/">CONTACT</a>
                         </li>
                   </ul>
               </nav>
@@ -45,7 +45,7 @@
             <section>
                 <div class="tipa-yoga">
                     <div class="testo-yoga">
-                        <p class="scritta-grande-yoga">E' scientificamente provato che lo stare in questa posizione fara' credere agli altri che voi stiate meditando</p>
+                        <p class="scritta-grande-yoga"><strong>E' scientificamente provato che lo stare in questa posizione fara' credere agli altri che voi stiate meditando</strong></p>
                         <p class="scritta-piccola-yoga">E' un ottimo modo per non essere disturbati in varie occasioni di socialita'. Col piccolo inconveniente di attirare a voi buddisti, vegani, fruttariani e tante altre categorie minori.</p> 
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                     <div class="colonna-destra">
                         <img class="immagine-destra" src="img/img-3.jpg" alt="uomini-lampadina">
                         <h4>Lampadine giganti</h4>
-                        <p>In Belgio il governo ha stanziato fondi stellari per posizionare lampadine giganti in ogni angolo delle citta'. Queste lampadine oltre a garantire illuminazione consentono ai cittadini di riscaldare le parti basse.</p></div>
+                        <p>In Belgio il governo ha stanziato fondi stellari per posizionare lampadine giganti in ogni angolo delle citta'. Queste lampadine oltre a garantire illuminazione consentono ai cittadini di riscaldare le zone basse.</p></div>
                 </div>
             </section>
         </main>
